--- a/carparts/templates/dashboard.html
+++ b/carparts/templates/dashboard.html
@@ -14,7 +14,7 @@
     </nav>
     <div class="max-w-4xl mx-auto mt-10">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <a href="clients.html" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Клиенты</a>
+            <a href="{{ url_for('_view_clients') }}" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Клиенты</a>
             <a href="/users" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Пользователи</a>
             <a href="/reports" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Отчёты</a>
             <a href="/inventory" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Склад</a>
