--- a/carparts/templates/view_clients.html
+++ b/carparts/templates/view_clients.html
@@ -20,6 +20,8 @@
                     <th class="p-3">Имя</th>
                     <th class="p-3">Email</th>
                     <th class="p-3">Телефон</th>
+                    <th class="p-3">Город</th>
+                    <th class="p-3">Адрес</th>
                     <th class="p-3">Действия</th>
                 </tr>
             </thead>
@@ -29,6 +31,8 @@
                     <td class="p-3">{{ client.name }}</td>
                     <td class="p-3">{{ client.email }}</td>
                     <td class="p-3">{{ client.phone }}</td>
+                    <td class="p-3">{{ client.city }}</td>
+                    <td class="p-3">{{ client.address }}</td>
                     <td class="p-3">
                         <a href="/edit_client/{{ client.id }}" class="text-blue-500">Редактировать</a>
                         <form action="/delete_client/{{ client.id }}" method="POST" class="inline">
