--- a/carparts/templates/view_products.html
+++ b/carparts/templates/view_products.html
@@ -13,8 +13,8 @@
         <a href="/" class="text-gray-600 hover:text-black">На главную</a>
     </nav>
     <div class="max-w-4xl mx-auto mt-10">
-        <h2 class="text-3xl font-semibold mb-6">Список продуктов</h2>
-        <a href="/add_product" class="bg-black text-white p-3 rounded-lg">Добавить продукт</a>
+        <h2 class="text-3xl font-semibold mb-6">Список товаров</h2>
+        <a href="/add_product" class="bg-black text-white p-3 rounded-lg">Добавить товар</a>
         <table class="w-full mt-6 bg-white shadow-md rounded-lg">
             <thead>
                 <tr class="bg-gray-200">
