--- a/carparts/templates/dashboard.html
+++ b/carparts/templates/dashboard.html
@@ -14,10 +14,9 @@
     </nav>
     <div class="max-w-4xl mx-auto mt-10">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <a href="{{ url_for('_view_clients') }}" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Клиенты</a>
-            <a href="{{ url_for('_view_products') }}" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Товары</a>
+            <a href="{{ url_for('view_clients') }}" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Клиенты</a>
+            <a href="{{ url_for('view_products') }}" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Товары</a>
             <a href="{{ url_for('view_inventory_logs') }}" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Логи</a>
-            <a href="{{ url_for('log_analysis') }}" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Анализ логов</a>
             <a href="/" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Состав заказа</a>
         </div>
     </div>
