--- a/carparts/templates/view_order_items.html
+++ b/carparts/templates/view_order_items.html
@@ -10,7 +10,7 @@
     <nav class="bg-white shadow-md p-4 flex justify-between items-center">
         <h1 class="text-xl font-semibold">CarParts - Товары в заказе #{{ order_id }}</h1>
         <div class="space-x-4">
-            <a href="/add_order_item/{{ order_id }}" class="text-blue-500 hover:text-blue-700">Добавить товар</a>
+            <a href="/view_products" class="text-blue-500 hover:text-blue-700">Добавить товар</a>
             <a href="/edit_order/{{ order_id }}" class="text-gray-600 hover:text-black">Назад к заказу</a>
         </div>
     </nav>
