updated suppliers view

--- a/carparts/templates/view_suppliers.html
+++ b/carparts/templates/view_suppliers.html
@@ -30,7 +30,7 @@
                     <td class="p-3">{{ supplier.contact_info }}</td>
                     <td class="p-3">{{ supplier.city }}</td>
                     <td class="p-3">
-                        <a href="/edit_client/{{ client.id }}" class="text-blue-500">Редактировать</a>
+                        <a href="/" class="text-blue-500">Редактировать</a>
                         <form action="/delete_supplier/{{ supplier.id }}" method="POST" class="inline">
                             <button type="submit" class="text-red-500">Удалить</button>
                         </form>
