--- a/carparts/templates/dashboard.html
+++ b/carparts/templates/dashboard.html
@@ -17,7 +17,7 @@
             <a href="{{ url_for('view_clients') }}" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Клиенты</a>
             <a href="{{ url_for('view_products') }}" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Товары</a>
             <a href="{{ url_for('view_inventory_logs') }}" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Логи</a>
-            <a href="/" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Состав заказа</a>
+            <a href="{{ url_for('view_suppliers') }}" class="bg-white p-6 rounded-2xl shadow-md text-center hover:bg-gray-200">Поставщики</a>
         </div>
     </div>
 </body>
